# COV-brain-tumor-detection

./: COV-brain-tumor-detection.ipynb  README.md  brain-tumor-detection.py  config.py  main.py  model_history.pkl  pyproject.toml
.ipynb_checkpoints/: COV-brain-tumor-detection-checkpoint.ipynb
COV_brain_tumor_detection/: __init__.py  config.py  model_history.pkl
COV_brain_tumor_detection/histories/: model_efficientnet_history.pkl  model_mnasnet_history.pkl  model_nasnetmobile_history.pkl  model_vgg16_history.pkl
COV_brain_tumor_detection/model/: __init__.py  model.py
COV_brain_tumor_detection/models/: __init__.py  models.py
COV_brain_tumor_detection/preprocessing/: __init__.py  data_augmentation.py  data_loaders.py  data_preparation.py  data_preprocessing.py
COV_brain_tumor_detection/utils/: __init__.py  data_utils.py
COV_brain_tumor_detection/visualization/: __init__.py  plot_results.py
data_preprocessing/: data_processing.py  image_augmentation.py
model/: model.py
preprocessing/: data_processing.py
utils/: data_utils.py
visualization/: plot_results.py
