[tool.poetry]
name = "cov-brain-tumor-detection"
version = "0.1.0"
description = ""
authors = ["s20488 <s20488@pjwstk.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiobotocore = "^2.13.1"
aiohttp = "^3.9.5"
aioitertools = "^0.11.0"
aiosignal = "^1.3.1"
annotated-types = "^0.7.0"
ansicon = "^1.89.0"
antlr4-python3-runtime = "^4.13.1"
anyio = "^4.4.0"
argon2-cffi = "^23.1.0"
argon2-cffi-bindings = "^21.2.0"
arrow = "^1.3.0"
asttokens = "^2.4.1"
async-lru = "^2.0.4"
async-timeout = "^4.0.3"
attrs = "^23.2.0"
babel = "^2.15.0"
backoff = "^2.2.1"
beautifulsoup4 = "^4.12.3"
bitsandbytes = "^0.43.1"
bleach = "^6.1.0"
blessed = "^1.20.0"
brotli = "^1.1.0"
cachecontrol = "^0.14.0"
certifi = "^2024.6.2"
cffi = "^1.16.0"
charset-normalizer = "^3.3.2"
cleo = "^2.1.0"
click = "^8.1.7"
colorama = "^0.4.6"
comm = "^0.2.2"
contourpy = "^1.2.1"
crashtest = "^0.4.1"
croniter = "^2.0.5"
cycler = "^0.12.1"
dateutils = "^0.6.12"
debugpy = "^1.8.2"
decorator = "^5.1.1"
deepdiff = "^7.0.1"
defusedxml = "^0.7.1"
distlib = "^0.3.8"
dnspython = "^2.6.1"
docker = "^7.1.0"
docstring-parser = "^0.16"
editor = "^1.6.6"
email-validator = "^2.2.0"
exceptiongroup = "^1.2.1"
executing = "^2.0.1"
fastapi = "^0.111.0"
fastapi-cli = "^0.0.4"
filelock = "^3.15.4"
fonttools = "^4.53.0"
fqdn = "^1.5.1"
frozenlist = "^1.4.1"
fsspec = "^2024.6.1"
glib = "^1.0.0"
graphite2 = "^0.0.1"
h11 = "^0.14.0"
h2 = "^4.1.0"
hpack = "^4.0.0"
httpcore = "^1.0.5"
httptools = "^0.6.1"
httpx = "^0.27.0"
huggingface-hub = "^0.23.4"
hyperframe = "^6.0.1"
icu = "^0.0.1"
idna = "^3.7"
imath = "^0.0.2"
importlib-metadata = "^8.0.0"
importlib-resources = "^6.4.0"
imutils = "^0.5.4"
inquirer = "^3.3.0"
intel-openmp = "^2024.2.0"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.3"
isoduration = "^20.11.0"
jaraco-classes = "^3.4.0"
jedi = "^0.19.1"
jinja2 = "^3.1.4"
jinxed = "^1.2.1"
jmespath = "^1.0.1"
joblib = "^1.4.2"
json5 = "^0.9.25"
jsonargparse = "^4.31.0"
jsonpointer = "^3.0.0"
jsonschema = "^4.22.0"
jsonschema-specifications = "^2023.12.1"
jupyter = "^1.0.0"
jupyter-client = "^8.6.2"
jupyter-console = "^6.6.3"
jupyter-core = "^5.7.2"
jupyter-events = "^0.10.0"
jupyter-lsp = "^2.2.5"
jupyter-server = "^2.14.1"
jupyter-server-terminals = "^0.5.3"
jupyterlab = "^4.2.3"
jupyterlab-pygments = "^0.3.0"
jupyterlab-server = "^2.27.2"
jupyterlab-widgets = "^3.0.11"
kiwisolver = "^1.4.5"
lerc = "^4.0.1"
lightning = "^2.3.1"
lightning-api-access = "^0.0.5"
lightning-cloud = "^0.5.70"
lightning-fabric = "^2.3.1"
lightning-utilities = "^0.11.3.post0"
markdown-it-py = "^3.0.0"
markupsafe = "^2.1.5"
matplotlib = "^3.9.0"
matplotlib-inline = "^0.1.7"
mdurl = "^0.1.2"
mistune = "^3.0.2"
mkl-service = "^2.4.1"
more-itertools = "^10.3.0"
qtconsole = "^5.5.2"
qtpy = "^2.4.1"
rapidfuzz = "^3.9.4"
readchar = "^4.1.0"
redis = "^5.0.7"
referencing = "^0.35.1"
requests = "^2.32.3"
requests-toolbelt = "^1.0.0"
rfc3339-validator = "^0.1.4"
rfc3986-validator = "^0.1.1"
rich = "^13.7.1"
rpds-py = "^0.18.1"
runs = "^1.2.2"
s3fs = "^2024.6.1"
s3transfer = "^0.10.2"
safetensors = "^0.4.3"
scikit-learn = "^1.5.0"
send2trash = "^1.8.3"
setuptools = "^70.2.0"
shellingham = "^1.5.4"
sip = "^6.8.5"
six = "^1.16.0"
snappy = "^3.1.1"
sniffio = "^1.3.1"
soupsieve = "^2.5"
stack-data = "^0.6.3"
starlette = "^0.37.2"
sympy = "^1.12.1"
tbb = "^2021.13.0"
tensorboardx = "^2.6.2.2"
terminado = "^0.18.1"
threadpoolctl = "^3.5.0"
tinycss2 = "^1.3.0"
tk = "^0.1.0"
toml = "^0.10.2"
tomli = "^2.0.1"
tomlkit = "^0.12.5"
torchmetrics = "^1.4.0.post0"
tornado = "^6.4.1"
traitlets = "^5.14.3"
trove-classifiers = "^2024.7.2"
typer = "^0.12.3"
types-python-dateutil = "^2.9.0.20240316"
typeshed-client = "^2.5.1"
typing-extensions = "^4.12.2"
tzdata = "^2024.1"
vc = "^2018.7.10"
virtualenv = "^20.26.3"
watchfiles = "^0.22.0"
wcwidth = "^0.2.13"
webcolors = "^24.6.0"
webencodings = "^0.5.1"
websocket-client = "^1.8.0"
websockets = "^12.0"
wheel = "^0.43.0"
widgetsnbextension = "^4.0.11"
win-inet-pton = "^1.1.0"
wrapt = "^1.16.0"
xmod = "^1.8.1"
yarl = "^1.9.4"
zipp = "^3.19.2"
zstandard = "^0.22.0"
zstd = "^1.5.5.1"
ujson = "^5.10.0"
unicodedata2 = "^15.1.0"
uri-template = "^1.3.0"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
